--- a/HEAP.vcxproj.filters
+++ b/HEAP.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClInclude Include="heap.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="Indexsort.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
